2009-02-28  Les Harris  <lharris@gnome.org>

	* configure.ac: Added autofoo for debug logger, off by default.
	* src/Makefile.am: Autofoo for debug logger.
	* src/debug-logger.[ch]: New files which implement the debug logger. 
	* src/gnome-mud.c (main): Now creates two logger domains.
	* src/mud-telnet-mccp.c (mud_mccp_decompress): Changed mccp
	decompression back to faster method.
	* src/mud-telnet.c (mud_telnet_process),
	(mud_telnet_get_telopt_string): Changed logging to use new logger,
	added more debug info in telopt_string.
	* ui/Makefile.am:
	* ui/directions.glade: Removed directions.glade.
	* ui/main.glade: Added ui for debug logger.

2009-02-27  Les Harris  <lharris@gnome.org>

	* src/mud-telnet-mccp.c (mud_mccp_decompress): Reverted MCCP code.

2009-02-27  Jordi Mallach  <jordi@sindominio.net>

	* NEWS: Updated for 0.11.2.

	* Makefile.am, configure.ac: Stop generating a .lsm file for ibiblio.
	* gnome-mud.lsm.in: Removed.

	* configure.ac: Release gnome-mud 0.11.2.

2009-02-27  Les Harris  <lharris@gnome.org>

	* src/mud-telnet-mccp.c (mud_mccp_decompress): Replaced character
	iteration with g_string_append_len.
	* ui/prefs.glade: Set the left treeview to no expand so the ui on the
	right expands properly.

2009-02-27  Les Harris  <lharris@gnome.org>

	* gnome-mud.schemas.in: Pruned unused keys from schema.
	* plugins/Makefile.am:
	* plugins/automapper/Makefile:
	* plugins/automapper/directions.h:
	* plugins/automapper/map-link.c:
	* plugins/automapper/map.c:
	* plugins/automapper/map.h: Removed old automapper.
	* src/gconf-helper.c (gm_gconf_load_preferences):
	* src/mud-profile.c (mud_profile_finalize),
	(mud_profile_copy_preferences), (mud_profile_gconf_changed): Removed
	code that accessed unused keys.
	* src/mud-window.c (mud_window_init): Removed Quick Connect.
	* ui/Makefile.am: Removed connect.glade.
	* ui/connect.glade: Removed file.
	* ui/main.glade: Removed quick connect from menu.