@@ -106,6 +106,12 @@ int main (gint argc, char *argv[])
     debug_logger_add_domain(logger, "Gnome-Mud", TRUE);
     debug_logger_add_domain(logger, "Telnet", FALSE);
 
+    g_critical("Foobar");
+    g_warning("Barfoo");
+    g_message("spam spam spam");
+    g_log(NULL, G_LOG_LEVEL_INFO, "Bazfoo");
+    g_log(NULL, G_LOG_LEVEL_DEBUG, "Foobazbar");
+
     mud_window_new();
 
     gtk_main();
